--- a/src/css/eat.css
+++ b/src/css/eat.css
@@ -7,3 +7,77 @@
     .fo_header .fo_header_con img {
       width: 1422px;
       height: 445px; }
+
+.fo_section {
+  width: 100%;
+  margin-top: 23px; }
+  .fo_section .fo_section_top {
+    width: 1310px;
+    height: 1003px;
+    margin: 0 auto; }
+  .fo_section .fo_eat_goods {
+    width: 1310px;
+    height: 134px; }
+    .fo_section .fo_eat_goods img {
+      display: block;
+      margin: 0 auto; }
+  .fo_section ul li {
+    width: 325px;
+    height: 413px;
+    margin-bottom: 22px;
+    float: left;
+    margin-left: 2px;
+    position: relative; }
+    .fo_section ul li div {
+      width: 325px;
+      height: 336px; }
+      .fo_section ul li div img {
+        width: 325px;
+        height: 336px;
+        display: block; }
+    .fo_section ul li div:hover {
+      overflow: hidden; }
+      .fo_section ul li div:hover img {
+        transform: scale(1.1);
+        transition: all 0.3s; }
+    .fo_section ul li h2 {
+      font-size: 18px;
+      color: #000;
+      font-weight: 100;
+      line-height: 50px;
+      margin-left: 32px; }
+    .fo_section ul li p {
+      margin-left: 32px;
+      font-size: 21px;
+      color: #ff8000; }
+    .fo_section ul li h3 {
+      position: absolute;
+      left: 266px;
+      top: 352px; }
+      .fo_section ul li h3 img {
+        display: block;
+        width: 48px;
+        height: 48px; }
+
+#fo_box {
+  margin-left: 163px; }
+
+.fo_footer {
+  width: 100%;
+  height: 145px;
+  background: #ee4b0a; }
+  .fo_footer .fo_footer_con {
+    width: 1422px; }
+    .fo_footer .fo_footer_con img {
+      width: 1422px; }
+
+.fo_ding {
+  position: fixed;
+  left: 1300px;
+  top: 650px;
+  width: 60px;
+  height: 60px; }
+  .fo_ding img {
+    display: block;
+    width: 60px;
+    height: 60px; }
