--- a/src/scss/eat.scss
+++ b/src/scss/eat.scss
@@ -10,3 +10,94 @@
 		}
 	}
 }
+.fo_section{
+	width:100%;
+	margin-top: 23px;
+	.fo_section_top{
+		width:1310px;
+		height:1003px;
+		margin:0 auto;
+	}
+	.fo_eat_goods{
+		width: 1310px;
+		height:134px;
+		img{
+			display:block;
+			margin:0 auto;
+		}
+	}
+	ul{
+		li{
+			width:325px;
+			height:413px;
+			margin-bottom:22px;
+			float: left;
+			margin-left: 2px;
+			position: relative;
+			div{
+				width:325px;
+				height:336px;
+				img{
+					width:325px;
+					height:336px;
+					display: block;
+				}
+			}
+			div:hover{
+				overflow: hidden;
+				img{
+					transform:scale(1.1);
+					transition:all 0.3s;
+				}
+			}
+			h2{
+				font-size: 18px;
+				color:#000;
+				font-weight: 100;
+				line-height: 50px;
+				margin-left: 32px;
+			}
+			p{
+				margin-left: 32px;
+				font-size: 21px;
+				color:#ff8000;
+			}
+			h3{
+				position:absolute;
+				left:266px;
+				top:352px;
+				img{
+					display: block;
+					width:48px;
+					height:48px;
+				}
+			}
+		}
+	}
+}
+#fo_box{
+	margin-left: 163px;
+}
+.fo_footer{
+	width: 100%;
+	height:145px;
+	background:#ee4b0a;
+	.fo_footer_con{
+		width:1422px;
+		img{
+			width:1422px;
+		}
+	}
+}
+.fo_ding{
+	position: fixed;
+	left:1300px;
+	top:650px;
+	width:60px;
+	height:60px;
+	img{
+		display:block;
+		width:60px;
+		height:60px;
+	}
+}
