--- a/src/css/common.css
+++ b/src/css/common.css
@@ -409,3 +409,5 @@ input, img {
     line-height: 40px;
     text-decoration: none;
     text-align: center; }
+
+/*# sourceMappingURL=common.css.map */
