--- a/src/css/details.css
+++ b/src/css/details.css
@@ -1,56 +1,200 @@
-/*
-Error: Invalid CSS after "			margin-top": expected ";", was ": 2px;"
-        on line 26 of ./src/scss/details.scss
+.fi_search {
+  box-shadow: 0 3px 5px #f1f1f1;
+  height: 138px; }
 
-21: 			color:#333;
-22: 		}
-23: 	}
-24: 	.five_three{
-25: 			width:
-26: 			margin-top: 2px;
-27: 			margin-left: 2px;
-28: 			display: block;
-29: 			font-size: 15px;
-30: 			// color: #fff;
-31: 		}	
+.five_section {
+  width: 100%; }
 
-Backtrace:
-./src/scss/details.scss:26
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:1278:in `expected'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:1208:in `expected'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:1203:in `tok!'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:804:in `block in try_declaration'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:1254:in `rethrow'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:809:in `try_declaration'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:732:in `declaration_or_ruleset'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:697:in `block_child'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:686:in `block_contents'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:678:in `block'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:747:in `declaration_or_ruleset'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:697:in `block_child'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:689:in `block_contents'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:678:in `block'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:670:in `ruleset'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:696:in `block_child'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:686:in `block_contents'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:137:in `stylesheet'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/scss/parser.rb:41:in `parse'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/engine.rb:414:in `_to_tree'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/engine.rb:290:in `render'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:464:in `update_stylesheet'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:209:in `each'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/plugin.rb:82:in `update_stylesheets'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/exec/sass_scss.rb:340:in `watch_or_update'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/exec/sass_scss.rb:51:in `process_result'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/exec/base.rb:52:in `parse'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/lib/sass/exec/base.rb:19:in `parse!'
-D:/ruby/Ruby23-x64/lib/ruby/gems/2.3.0/gems/sass-3.5.6/bin/sass:13:in `<top (required)>'
-D:/ruby/Ruby23-x64/bin/sass:22:in `load'
-D:/ruby/Ruby23-x64/bin/sass:22:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid CSS after \"			margin-top\": expected \";\", was \": 2px;\"\A         on line 26 of ./src/scss/details.scss\A \A 21: 			color:#333;\A 22: 		}\A 23: 	}\A 24: 	.five_three{\A 25: 			width:\A 26: 			margin-top: 2px;\A 27: 			margin-left: 2px;\A 28: 			display: block;\A 29: 			font-size: 15px;\A 30: 			// color: #fff;\A 31: 		}	"; }
+.five_section_con {
+  width: 1011px;
+  height: 1065px;
+  margin: 0 auto; }
+
+.five_section_con_one {
+  width: 1011px;
+  height: 83px;
+  background: url("../imgs/details/five1.jpg") no-repeat 1px 27px;
+  border-bottom: 1px solid #ddd; }
+
+.iconfont {
+  font-size: 22px;
+  color: #555;
+  margin-left: 1px;
+  margin-top: 2px; }
+
+.five_section_con_one h6 {
+  font-size: 21px;
+  color: #555;
+  line-height: 83px;
+  margin-left: 33px;
+  font-weight: 100; }
+
+.five_section_con_two {
+  height: 112px;
+  border-bottom: 1px solid #ddd; }
+  .five_section_con_two .five_section_con_two_top {
+    height: 55px;
+    cursor: pointer; }
+    .five_section_con_two .five_section_con_two_top h2 {
+      font-size: 14px;
+      font-weight: 100;
+      color: #55559a;
+      line-height: 54px;
+      float: left; }
+    .five_section_con_two .five_section_con_two_top h3 {
+      float: right;
+      font-size: 14px;
+      color: #5157a6;
+      line-height: 54px;
+      font-weight: 100; }
+    .five_section_con_two .five_section_con_two_top h3:hover {
+      color: #f6aa00; }
+  .five_section_con_two .five_section_con_two_bottom {
+    height: 57px; }
+    .five_section_con_two .five_section_con_two_bottom h6 {
+      font-size: 14px;
+      color: #55559a;
+      padding-top: 2px;
+      cursor: pointer;
+      margin-left: 26px; }
+    .five_section_con_two .five_section_con_two_bottom h5 {
+      font-size: 14px;
+      color: #55559a;
+      padding-top: -21px;
+      cursor: pointer;
+      margin-left: 26px;
+      display: none; }
+
+.five_section_con_three {
+  height: 111px;
+  border-bottom: 1px solid #ddd; }
+  .five_section_con_three h1 {
+    font-size: 16px;
+    color: #555555;
+    font-weight: 100; }
+  .five_section_con_three ul li {
+    float: left;
+    width: 134px;
+    height: 34px;
+    border: 1px solid #ddd;
+    margin-left: 30px;
+    margin-top: 20px;
+    line-height: 34px;
+    text-align: center;
+    font-size: 14px;
+    color: #333;
+    cursor: pointer; }
+  .five_section_con_three ul .active {
+    border: 1px solid red; }
+
+.five_section_con_four {
+  border-bottom: 1px solid #ddd;
+  height: 321px; }
+  .five_section_con_four p {
+    font-size: 16px;
+    color: #555555; }
+  .five_section_con_four ul .five_six {
+    width: 403px;
+    height: 54px;
+    margin-left: 30px;
+    line-height: 54px;
+    border-bottom: 1px solid #ddd;
+    font-size: 14px;
+    color: #999; }
+    .five_section_con_four ul .five_six span {
+      margin-left: 11px; }
+    .five_section_con_four ul .five_six a {
+      margin-left: 282px;
+      color: #5157a6; }
+  .five_section_con_four ul .five_sevent {
+    width: 403px;
+    height: 128px;
+    margin-left: 30px; }
+    .five_section_con_four ul .five_sevent span {
+      float: left;
+      margin-top: 50px;
+      font-size: 14px;
+      color: #999; }
+    .five_section_con_four ul .five_sevent textarea {
+      width: 330px;
+      float: left;
+      margin-top: 26px;
+      height: 70px;
+      margin-left: 3px;
+      font-size: 14px;
+      color: #999; }
+  .five_section_con_four ul .five_eight {
+    font-size: 14px;
+    color: #999;
+    margin-left: 30px;
+    margin-top: 12px;
+    margin-bottom: 30px; }
+    .five_section_con_four ul .five_eight span {
+      color: #64a131; }
+
+.five_section_con_five {
+  border-bottom: 1px solid #ddd;
+  height: 160px; }
+  .five_section_con_five p {
+    font-size: 15px;
+    color: #555;
+    margin-top: 21px; }
+  .five_section_con_five h2 {
+    font-size: 13px;
+    margin-top: 30px;
+    color: #555; }
+    .five_section_con_five h2 input {
+      outline: none;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      width: 80px;
+      height: 30px;
+      margin-left: 7px; }
+  .five_section_con_five h3 {
+    font-size: 13px;
+    margin-top: 30px;
+    color: #555;
+    margin-bottom: 30px; }
+    .five_section_con_five h3 a {
+      margin-left: 53px;
+      color: #5157a6; }
+
+.five_section_con_six {
+  height: 255px; }
+  .five_section_con_six ul {
+    height: 150px; }
+    .five_section_con_six ul li {
+      margin-left: 863px;
+      line-height: 30px;
+      color: #ddd;
+      font-size: 14px; }
+  .five_section_con_six .settlement {
+    height: 105px;
+    margin-top: 10px; }
+    .five_section_con_six .settlement .settlement_left {
+      width: 205px;
+      height: 48px;
+      background: #f5ffed;
+      float: left;
+      border: 1px solid #64a131;
+      line-height: 48px;
+      padding-left: 645px;
+      font-size: 14px;
+      color: #333; }
+      .five_section_con_six .settlement .settlement_left span {
+        color: #64a131;
+        font-size: 18px;
+        font-weight: 600; }
+    .five_section_con_six .settlement input {
+      font-size: 20px;
+      color: #fff;
+      line-height: 48px;
+      width: 151px;
+      outline: none;
+      border: 1px solid #64a131;
+      background: #64a131; }
+
+.fi_footer .fi_footer_top ul li {
+  border-top: 1px solid #ddd; }
+
+/*# sourceMappingURL=details.css.map */
