--- a/src/scss/details.scss
+++ b/src/scss/details.scss
@@ -1,33 +1,236 @@
-.fi_search .fi_search_right{
-	width:485px;
-	float: right;
-	height: 44px;
-	margin-top:54px;
-	background: url('../imgs/home/icons.png') no-repeat;
-	background-position:52px -943px;
-	ul{
-		li{
-			float: left;
-			font-size:13px;
-			color:#64a131;
-			margin-top: 49px;
-			margin-left: 32px;
+
+.fi_search{
+	box-shadow: 0 3px 5px #f1f1f1 ;
+	height:138px;
+}
+.five_section{
+	width:100%;
+}
+.five_section_con{
+	width:1011px;
+	height: 1065px;
+	margin:0 auto;
+}
+.five_section_con_one{
+	width:1011px;
+	height:83px;
+	background:url('../imgs/details/five1.jpg') no-repeat 1px 27px;
+	border-bottom: 1px solid #ddd;
+}
+.iconfont{
+	font-size:22px;
+	color:#555;
+	margin-left: 1px;
+	margin-top: 2px;
+}
+.five_section_con_one h6{
+	font-size: 21px;
+	color:#555;
+	line-height: 83px;
+	margin-left: 33px;
+	font-weight: 100;
+}
+.five_section_con_two{
+	height: 112px;
+	border-bottom: 1px solid #ddd;
+	.five_section_con_two_top{
+		height: 55px;
+		cursor: pointer;
+		h2{
+			font-size: 14px;
+			font-weight: 100;
+			color:#55559a;
+			line-height: 54px;
+			float:left;
 		}
-		#five_one{
-			margin-left:83px;
+		h3{
+			float: right;
+			font-size: 14px;
+			color:#5157a6;
+			line-height: 54px;
+			font-weight: 100;
 		}
-		#five_two{
-			margin-left:73px;
-			color:#333;
+		h3:hover{
+			color: #f6aa00;
 		}
 	}
-	.five_three{
-			width:12px;
-			height:19px;
-			margin-top: 2px;
-			margin-left: 2px;
-			display: block;
-			font-size: 15px;
-			// color: #fff;
-		}	
+	.five_section_con_two_bottom{
+		height:57px;
+		h6{
+			font-size: 14px;
+			color:#55559a;
+			padding-top: 2px;
+			cursor: pointer;
+			margin-left: 26px;
+		}
+		h5{
+			font-size: 14px;
+			color:#55559a;
+			padding-top: -21px;
+			cursor: pointer;
+			margin-left: 26px;
+			display:none;
+		}
+	}
+}
+.five_section_con_three{
+		height:111px;
+		border-bottom: 1px solid #ddd;
+		h1{
+			font-size: 16px;
+			color:#555555;
+			font-weight: 100;
+		}
+		ul{
+			li{
+				float: left;
+				width:134px;
+				height:34px;
+				border:1px solid #ddd;
+				margin-left: 30px;
+				margin-top: 20px;
+				line-height: 34px;
+				text-align: center;
+				font-size: 14px;
+				color:#333;
+				cursor: pointer;
+			}
+			.active{
+				border:1px solid red;
+			}
+		}
+	}
+.five_section_con_four{
+	border-bottom: 1px solid #ddd;
+	height:321px;
+	p{
+		font-size: 16px;
+		color:#555555;
+	}
+	ul{
+		.five_six{
+			width:403px;
+			height:54px;
+			margin-left: 30px;
+			line-height: 54px;
+			border-bottom: 1px solid #ddd;
+			font-size: 14px;
+			color:#999;
+			span{
+				margin-left: 11px;
+			}
+			a{
+				margin-left: 282px;
+				color:#5157a6;
+			}
+		}
+		.five_sevent{
+			width:403px;
+			height:128px;
+			margin-left: 30px;
+			span{
+				float: left;
+				margin-top: 50px;
+				font-size: 14px;
+				color:#999;
+			}
+			textarea{
+				width:330px;
+				float: left;
+				margin-top: 26px;
+				height: 70px;
+				margin-left: 3px;
+				font-size: 14px;
+				color:#999;
+			}
+		}
+		.five_eight{
+			font-size: 14px;
+			color:#999;
+			margin-left: 30px;
+			margin-top: 12px;
+			margin-bottom: 30px;
+			span{
+				color:#64a131;
+			}
+		}
+	}
+}
+.five_section_con_five{
+	border-bottom: 1px solid #ddd;
+	height: 160px;
+	p{
+		font-size: 15px;
+		color: #555;
+		margin-top: 21px;
+		// margin-left: 30px;
+	}
+	h2{
+		font-size: 13px;
+		margin-top: 30px;
+		color:#555;
+		input{
+			outline: none;
+			border:1px solid #ccc;
+			border-radius: 5px;
+			width:80px;
+			height:30px;
+			margin-left: 7px;
+		}
+	}
+	h3{
+		font-size: 13px;
+		margin-top: 30px;
+		color:#555;
+		margin-bottom: 30px;
+		a{
+			margin-left: 53px;
+			color:#5157a6;
+		}
+	}
+}
+.five_section_con_six{
+	// border-bottom: 1px solid #ddd;
+	height:255px;
+	ul{
+		height:150px;
+		li{
+			margin-left: 863px;
+			line-height: 30px;
+			color: #ddd;
+			font-size: 14px;
+		}
+	}
+	.settlement{
+		height:105px;
+		margin-top: 10px;
+		.settlement_left{
+			width:205px;
+			height:48px;
+			background:#f5ffed;
+			float: left;
+			border:1px solid #64a131;
+			line-height: 48px;
+			padding-left:645px;
+			font-size: 14px;
+			color: #333;
+			span{
+				color: #64a131;
+				font-size: 18px;
+				font-weight: 600;
+			}
+		}
+		input{
+			font-size: 20px;
+			color:#fff;
+			line-height: 48px;
+			width: 151px;
+			outline: none;
+			border:1px solid #64a131;
+			background: #64a131;
+		}
+	}
+}
+.fi_footer .fi_footer_top ul li {
+	border-top: 1px solid #ddd;
 }
